Add some transition

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <option value="Indonesia">Id</option>
         </select>
         <!-- Mobile -->
-        <ul class="navigation-menu flex mobile absolute active">
+        <ul class="navigation-menu flex mobile absolute">
           <li><a href="#">About</a></li>
           <li><a href="#">Models</a></li>
           <li><a href="#">Milestones</a></li>
